fixed bio shift

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -382,7 +382,7 @@ footer {
   }
 
   .bio {
-    margin-top: -13rem;
+    margin-top: -2rem;
     width: 20.5rem;
   }
 
